slow data decode: type 3, 4 and 5

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -30,6 +30,7 @@ list(APPEND ambe3000_sources
     DStarHeader.cc
     DStarDecode.cc
     SyncRegister.cc
+    SlowData.cc
     dstar_decode_bs_impl.cc
     bit_reverse_bb_impl.cc )
 
